--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Wasif Jawad Hussain"
 title_separator          : "-"
 name                     : &name "Wasif Jawad Hussain"
-description              : &description "Junior Undergraduate, Dept. of Electrical Engineering, IIT-Kanpur"
+description              : &description "Junior Undergraduate, Dept. of EE, IIT-Kanpur"
 url                      : https://wasif1508.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "wasif1508/wasif1508.github.io"
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Wasif Jawad Hussain"
   avatar           : "profile.png"
-  bio              : "Junior Undergraduate, Dept. of Electrical Engineering, IIT-Kanpur"
+  bio              : "Junior Undergraduate, Dept. of EE, IIT-Kanpur"
   location         : "Kanpur, India"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : # "http://yourfullgooglescholarurl.com"
-  email            :
+  email            : "wasif@iitk.ac.in"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
