--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: /courses/    
     
   - title: "Projects"
-    url: /courses/
+    url: /projects/
         
 #   - title: "Blog Posts"
 #     url: /year-archive/
