--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,11 +1,11 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
+  name        : "Wasif Jawad Hussain"
   uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
+  email       : "wasif@iitk.ac.in"
+  bio         : "Avid Learner"
+  avatar      : "/images/profile.png"
   twitter     : "name"
   google_plus : "Name"
 
