--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,7 +2,7 @@
 
 Name Name:
   name        : "Wasif Jawad Hussain"
-  uri         : "http://name.com"
+  uri         : "http://wasif1508.github.io"
   email       : "wasif@iitk.ac.in"
   bio         : "Avid Learner"
   avatar      : "/images/profile.png"
