--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Wasif Jawad Hussain"
 title_separator          : "-"
 name                     : &name "Wasif Jawad Hussain"
-description              : &description "Junior Undergraduate, Dept. of EE, IIT-Kanpur"
+description              : &description "Senior Undergraduate, Dept. of EE, IIT-Kanpur"
 url                      : https://wasif1508.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "wasif1508/wasif1508.github.io"
