--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Wasif Jawad Hussain"
   avatar           : "profile.png"
-  bio              : "Junior Undergraduate, Dept. of EE, IIT-Kanpur"
+  bio              : "Senior Undergraduate, Dept. of EE, IIT-Kanpur"
   location         : "Kanpur, India"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
